css/styles.css
h1 {
  font-family: 'Times New Roman', serif;
  font-size: 15px;
}
h2 {
  font-family: 'Ramabhadra', sans-serif;
  font-size: 18px;
}
h3 {
  font-family: 'Roboto Condensed', sans-serif;
  font-size: 14px;
  /*padding-left:50px;*/
}
/* Footer Type*/
h4 {
  font-family: 'Roboto Condensed', sans-serif;
  font-size: 12px;
}

/*for right flush*/
h5 {
  font-family: 'Roboto Condensed', sans-serif;
  font-size: 14px;
}
.padding-top{
  padding-top:12px;
}

/* Prevent the <body> from scrolling */
.noScroll {
  overflow: hidden;
}

.fullHeight { /* Was "container" */
  /* Force this to the full height of the browser window.
     Or use position: absolute; height: 100%; */
  height: 100vh;

  /* Limit the overall page width */
  max-width: 1265px;

  /* Stack header/middle/footer vertically */
  display: flex;
  flex-direction: column;
}

/* This will take the height that it needs for the Logo and Nav */
.header {
}

/* CSS Flex gives this the remaining space in the middle of the fullHeight div. */
.middle {
  /* Allow the contents to exceed this height and scroll to show them */
  overflow: scroll;
  
  /* From https://moduscreate.com/blog/how-to-fix-overflow-issues-in-css-flex-layouts/,
     may be needed for other browsers. */
  min-height: 0px;
}

/* This will take the height it needs for the social icons & Credits */
.footer {
}

.flexContainer {
  display: flex;
  flex-wrap: wrap;
  justify-content:center;
}
.flexItem {
  width: 200px;
  height: 200px;
  margin: 4px;
  background-color: blue;
}

/* NAV */
#nav {
  width:100%;
  padding-left: 0;
  padding-top: 0;
  list-style: none;
}

/* pulls nav into a horizontal row */
#nav li a {
  display: block;
  padding: 8px 12px;
  text-decoration: none;
  font-family: 'Roboto Condensed', sans-serif;
  font-size: 15px;
  color: black;
  float: left;
}

#nav li a:hover {
  color: pink;
  text-decoration: none;
}

#nav li a {
  text-decoration: none;
  color: black;
}

#nav li a.navFirst {
  padding-left: 0;
}

#nav li a.selected {
  color: #90c200;
}

.col100 {
  width: 97%;
  height: auto;
  margin: 1% 1%;
  float: left;
}
.col50 {
  /*background-color:green;*/
  width: 47%;
  margin: 1% 1%;
  float: left;
}
.col25 {
  /*background-color:green;*/
  width: 22.5%;
  height: 100px;
  margin: 1% 1%;
  float: left;
  background-color: #f0c7a1;
}
.clear {
  clear: both;
}

/* Back to Top arrow*/
.back-to-top {
  position: fixed;
  bottom: 30px;
  right: 5%;
  color: black;
  line-height: 30px;
  text-align: center;
  text-decoration: none;
  width: 32px;
  height: 32px;
  border: 0;
  border-radius: 50%;
  /*display: none;*/
  cursor: pointer;
  z-index: 1000;
}

.back-to-top:hover {
  color: #ddeab3;
}

.imgSizer {
  width: 100%;
  height: auto;
}

.NoUnderline {
  text-decoration: none;      
}

.hideFull{
  display:none;
}
.showFull{
  display:inherit;
}

/* TABLET */
@media only screen and (max-width: 991px) { 
  .hide900 {
    display:none;
  }
  .show900 {
    display:inherit;
  }
  .fullHeight {
    /*background-color:orange;*/
    max-width: 991px;
    /* margin: 0px auto;
    margin-top: 100px; */
  }
  .col50 {
    /*background-color:blue;*/
    width: 47%;
    height: auto;
    margin: 1% 1%;
    float:left;
  }
  h5 {
    font-family: 'Roboto Condensed', sans-serif;
    font-size: 14px;
    padding-left:10px;
  }
}

/* IPHONE */
@media only screen and (max-width: 500px) {
  .hide500 {
    display:none;
  }
  .show500{
    display:inherit;
    /* clear:left; */
    width:100%;
  }
  .fullHeight {
    /*background-color:green;*/
    max-width: 500px;
    /* margin: 0px auto;
    margin-top: 80px; */
  }
  .col50{
    background-color:red;
    width: 45%;
    height: 30px;
    margin: 1% 1%;
    float:left;
  }
}

